# rust-gameboy2

./: .gitignore  .gitmodules  .travis.yml  0.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html  rustfmt.toml
camera/: Cargo.toml
camera/src/: lib.rs
cgb/: 0.bootstrap.js  bootstrap.js  index.html
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  TODO
core/examples/: minifb.rs
core/src/: apu.rs  boot.rs  cartridge.rs  cpu.rs  debug.rs  dev.rs  device.rs  dma.rs  error.rs  gb.rs  gbc.rs  high_ram.rs  irq.rs  joypad.rs  lib.rs  ppu.rs  ram.rs  serial.rs  timer.rs  utils.rs  work_ram.rs
core/src/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  rom.rs
core/src/cpu/: cycles.rs  registers.rs
core/src/ppu/: debug.rs  io.rs  lcd.rs  oam.rs  video_ram.rs
core/src/ppu/io/: lcdc.rs  stat.rs
core/src/ram/: high.rs  hram.rs  video.rs  vram.rs  work.rs  wram.rs
core/tests/: boot.rs  cpu_instrs.rs  instr_timing.rs  integration_test.rs  mem_timing.rs
dmg/: bootstrap.js  index.html
native/: Cargo.toml  imgui.ini
native/src/: camera_sensor.rs  main.rs
roms/: readme.txt
src/: boot.rs  cartridge.rs  cpu.rs  dev.rs  dma.rs  joypad.rs  lib.rs  ppu.rs  timer.rs
src/cpu/: registers.rs
src/ppu/: oam.rs  video_ram.rs
utils/: Cargo.toml
utils/src/: dasm.rs  lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  sensor.rs
wasm/www/: index.html  index.js  package-lock.json  package.json
