[package]
name = "rust-gameboy2"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
byteorder = "1.3.4"
serde = { version = "1.0", features = ["derive"], optional = true }