[package]
name = "rust-gameboy2"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
log = "0.4.11"
byteorder = "1.3.4"
bitflags = "1.2.1"
serde = { version = "1.0", features = ["derive"], optional = true }