[package]
name = "cli"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
pretty_env_logger = "0.4.0"
structopt = "0.3"
minifb = "0.19.1"
log = "0.4.11"
