[package]
name = "core"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "boot", "mbc1", "mbc2", "mbc3", "mbc5"]
boot    = []
debug   = ["palette", "embedded-graphics", "embedded-picofont"]
cgb     = []
rgba    = [] # rgba pixel format
bgra    = [] # argb pixel format (little endian u32)

# cartridge types
mbc1    = []
mbc2    = []
mbc3    = []
mbc5    = []

[dependencies]
log = "0.4.11"
byteorder = "1.3.4"
bitflags = "1.2.1"
educe = "0.4.13"
thiserror = "1.0.22"
cfg-if = "1.0.0"
serde = { version = "1.0", features = ["derive"], optional = true }
palette = { version = "0.5.0", optional = true }
embedded-graphics = { version = "0.6", optional = true }
embedded-picofont = { version = "0.2.1", optional = true }
wasm-bindgen = { version = "0.2.69", optional = true }