[package]
name = "core"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mbc1", "mbc2", "mbc3", "mbc5", "boot"]

boot = [] # boot sequence support (requires boot roms)
lcd_debug_overlay = ["palette"]
cgb = [] # color mode

# cartridge controllers
mbc1 = []
mbc2 = []
mbc3 = []
mbc5 = []

rgba = [] # R8_G8_B8_A8 pixel output format
bgra = [] # A8_R8_G8_B8 pixel output format
argb = [] # A8_R8_G8_B8 pixel output format (default)

[dependencies]
log = "0.4.11"
byteorder = "1.3.4"
bitflags = "1.2.1"
educe = "0.4.13"
thiserror = "1.0.22"
cfg-if = "1.0.0"
serde = { version = "1.0", features = ["derive"], optional = true }
palette = { version = "0.6.1", optional = true }
wasm-bindgen = { version = "0.2.69", optional = true }
