[package]
name = "native"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["camera"]
cgb = ["core/cgb"]

[dependencies]
core = { path = "../core", features = ["debug", "cgb"] }
camera = { path = "../camera", optional = true }
pretty_env_logger = "0.4.0"
log = "0.4.11"
image = "0.23.12"
sdl2 = { version = "0.34.3", features = ["raw-window-handle"] }
wgpu = "0.6.2"
futures = "0.3.8"
imgui = "0.6.1"
imgui-sdl2 = "0.13.0"
imgui-wgpu = "0.12.0"