[package]
name = "wasm"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = { path = "../core", features = ["debug", "wasm-bindgen", "rgba"] }
wasm-bindgen = "0.2.69"
web-sys = { version = "0.3.46", features = ["CanvasRenderingContext2d", "ImageData"] }
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s"
