[package]
name = "wasm"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = { path = "../core", features = ["wasm-bindgen", "rgba", "lcd_debug_overlay"] }
camera = { path = "../camera" }
image = { version = "0.24.5", default-features = false, features = ["png"] }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.46", features = ["CanvasRenderingContext2d", "ImageData", "HtmlVideoElement"] }
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"
wasm-log = "0.3.1"
cfg-if = "1.0.0"

[features]
default = []
cgb = ["core/cgb"]

[profile.release]
opt-level = "s"
